# sao-paolo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  publish-pypi.yml  slimcicd.yaml
example/: dbt_loom.config.yml  dbt_project.yml  lightdash.config.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt  selectors.yml
example-dbt-code/: dbt_project.yml  pyproject.toml  requirements.txt  selectors.yml
example-dbt-code/models/: schema.yml
example-dbt-code/models/marts/: cust_orders.sql  dim_customers.sql
example-dbt-code/models/staging/: stg_customers.sql  stg_orders.sql
example-dbt-code/seeds/: src_customers.csv  src_orders.csv
example-v2/: dbt_project.yml  pyproject.toml
example-v2/models/: schema.yml  sources.yml
example-v2/models/marts/: dim_wizards.sql  fct_orders.sql
example-v2/models/staging/: stg_wand_orders.sql  stg_wands.sql  stg_wizards.sql  stg_worlds.sql
example-v2/seeds/: wand_orders.csv  wands.csv  wizards.csv  worlds.csv
example/dbt_packages/: my_utils
example/models/: schema.yml
example/models/marts/: cust_orders.sql  orders_with_date_dim.sql
example/models/staging/: stg_customers.sql  stg_orders.sql
example/seeds/: src_tickets.csv
example_package/: dbt_project.yml
example_package/models/my_utils/: date_dimension.sql
example_package/seeds/: src_orders.csv  src_tickets.csv
example_v3/: dbt_project.yml  pyproject.toml
example_v3/macros/: custom_macro.sql
example_v3/models/: final_model.sql  model_a.sql  model_b.sql  model_c.sql  model_d.sql  model_snapshot_consumer.sql  schema.yml
example_v3/models/marts/: mart_converging_paths.sql  mart_deep_chain.sql  mart_ephemeral_dep.sql  mart_isolated.sql  mart_isolated_dep.sql  mart_macro_usage.sql  mart_self_ref.sql  mart_uses_ephemeral.sql  mart_with_seed.sql  mart_with_source.sql
example_v3/models/staging/: stg_base.sql  stg_fork_a.sql  stg_fork_b.sql
example_v3/seeds/: seed_data.csv
example_v3/snapshots/: simple_snapshot.sql
orchestra-dbt/src/: api.py  call_get_target.py  call_source_freshness.py  patcher.py  state.py
src/orchestra-dbt/: cache_store.py  dbt_runner.py  utils.py
src/orchestra_dbt/: asset_external_id.py  build_after.py  cache.py  call_source_freshness.py  checksum.py  cli.py  compatibility.py  config.py  constants.py  dag.py  dbt_runner.py  logger.py  ls.py  models.py  modify.py  orchestra.py  patcher.py  project_discovery.py  sao.py  source_freshness.py  state.py  state_errors.py  state_filters.py  state_storage.py  state_types.py  target_finder.py  utils.py
src/orchestra_dbt/source_freshness/: __init__.py
src/orchestra_dbt/source_freshness/fallbacks/: __init__.py  common.py  databricks.py  registry.py  snowflake.py
src/orchestra_dbt/state_backends/: __init__.py  azure.py  base.py  factory.py  gcs.py  http.py  local_file.py  logging.py  s3.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py  test_dbt_smoke.py  test_local.py  test_tutorial_dbt.py
tests/unit/: test_asset_external_id.py  test_build_after.py  test_cache.py  test_call_source_freshness.py  test_checksum.py  test_compatibility.py  test_config.py  test_dag.py  test_dbt_runner.py  test_logger.py  test_ls.py  test_models.py  test_modify.py  test_orchestra.py  test_patcher.py  test_sao.py  test_source_freshness.py  test_source_freshness_fallbacks.py  test_state.py  test_state_storage.py  test_target_finder.py  test_utils.py
tutorial/: README.md  pipeline.yaml
tutorial/dbt/: dbt_project.yml  profiles.yml  pyproject.toml
tutorial/dbt/functions/: is_positive_int.sql  schema.yml
tutorial/dbt/macros/: audit_run_id.sql
tutorial/dbt/models/: schema.yml
tutorial/dbt/models/marts/: mart_daily_totals.sql
tutorial/dbt/models/staging/: stg_events.sql
tutorial/dbt/seeds/: raw_events.csv
tutorial/dbt/snapshots/: snap_mart_daily_totals.sql
tutorial/dbt/tests/: assert_totals_reconcile.sql
