[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-dbt"
version = "0.3.0"
description = "Stateful orchestration for dbt Core projects in Orchestra."
authors = [{ name = "Oliver Crawford" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.14"
dependencies = ["click", "httpx", "packaging", "pydantic", "pyyaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/orchestra-hq/sao-paolo"
Issues = "https://github.com/orchestra-hq/sao-paolo/issues"

[project.optional-dependencies]
dev = [
    "basedpyright",
    "boto3",
    "dbt-core>=1.10,<1.12",
    "moto[s3]",
    "pytest-httpx",
    "pytest",
    "ruff",
]

# Warehouse adapters (optional). Not required for tests.
adapters = ["dbt-postgres"]

debug = ["awscrt", "boto3", "graphviz"]

# S3-backed state (optional; boto3 loaded only when S3 URI is configured)
s3 = ["boto3"]

[project.scripts]
orc = "orchestra_dbt.cli:main"

[tool.basedpyright]
typeCheckingMode = "basic"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
